--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.12.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
-    "next": "14.2.16",
+    "mongodb": "^6.13.0",
+    "mongoose": "^8.10.1",
+    "next": "^15.1.7",
     "react": "^18",
     "react-dom": "^18",
+    "svix": "^1.57.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
